## Uncommitted Changes

- Add basic type handling for single choice evaluation setting
- Add "|" handling to Item class

## Version 1.2.2

- Fix table visualization HTML code to work on server again
- Add multiple choice response type support
- Add encoder support for verify response type
- Add basic type support in choices and responses
- Fix subject table visualization from breaking on incomplete data
- Change propositional encoder from using "," to using ";"
- Update documentation

## Version 1.2.1

- Fix cache issue
- Fix issue causing package to load on linux
- Add squared difference comparator
- Work on documentation

## Version 1.2.0

- Change row marking in model_log visualization to alternate between colors
- Add evaluation handlers to suppy auxiliary evaluation targets
- Add separation of top-level and auxiliary evaluation targets
- Make comparators dynamically loadable
- Make output visualizations extend below 0
- Overhaul documentation
- Remove domain encoder information from benchmark files
- Add --version flag

## Version 1.1.0

- Improve rendering performance of output HTML file
- Extend and improve documentation
- Change behavior of person training data. Same domains as test data are provided as pre_train_person data, other domains are provided as pre_person_background data
- Add possibility for model logging in end_participant
- Add model log visualization
- Hide inapplicable visualizations

## Version 1.0.0

- Remove training data from coverage benchmarks
- Make propositional benchmark use crossvalidation
- Add coverage benchmarks to relational and propositional
- Add syllogistic network models (2019-Riesterer)
- Improve package documentation
- Overhaul benchmark handling
- Add possibility to supply multiple datasets as list in benchmark JSON
- Streamline evaluator
- Add "prediction" evaluation type as an evaluation without adaption
- Change model interface to pre_train, pre_train_person, and pre_train_background